--- a/JavaFXView/pom.xml
+++ b/JavaFXView/pom.xml
@@ -5,9 +5,9 @@
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
-    <groupId>com.example</groupId>
-    <artifactId>SudokuGameProject</artifactId>
-    <version>2.0-SNAPSHOT</version>
+        <groupId>com.example</groupId>
+        <artifactId>SudokuGameProject</artifactId>
+        <version>2.0-SNAPSHOT</version>
     </parent>
 
     <artifactId>JavaFXViewProject</artifactId>
@@ -42,6 +42,12 @@
             <version>${junit.version}</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>com.example</groupId>
+            <artifactId>ModelProject</artifactId>
+            <version>2.0-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
     <build>
@@ -64,7 +70,7 @@
                         <!-- Default configuration for running with: mvn clean javafx:run -->
                         <id>default-cli</id>
                         <configuration>
-                            <mainClass>com.example.javafxview/com.example.javafxview.HelloApplication</mainClass>
+                            <mainClass>com.example.javafxview/com.example.javafxview.App</mainClass>
                             <launcher>app</launcher>
                             <jlinkZipName>app</jlinkZipName>
                             <jlinkImageName>app</jlinkImageName>
