--- a/JavaFXView/pom.xml
+++ b/JavaFXView/pom.xml
@@ -36,6 +36,11 @@
             <version>2.0-SNAPSHOT</version>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>log4j</groupId>
+            <artifactId>log4j</artifactId>
+            <version>1.2.17</version>
+        </dependency>
     </dependencies>
 
     <build>
